-
Bug
-
Resolution: Done
-
P1: Critical
-
Qt Creator 4.3.0
When renaming a file in a Qbs project it will cause a crash. The following is the stack trace, inspecting the qbs::ProductData object indicates that it is invalid.
Qt5Cored.dll!QString::QString(const QString & other) Line 918 C++ > qbscored1.dll!qbs::ProductData::profile() Line 474 C++ QbsProjectManagerd4.dll!QbsProjectManager::Internal::QbsProject::uniqueProductName(const qbs::ProductData & product) Line 667 C++ QbsProjectManagerd4.dll!QbsProjectManager::Internal::QbsProject::renameFileInProduct(const QString & oldPath, const QString & newPath, const qbs::ProductData & productData, const qbs::GroupData & groupData) Line 301 C++ QbsProjectManagerd4.dll!QbsProjectManager::Internal::QbsProductNode::renameFile(const QString & filePath, const QString & newFilePath) Line 443 C++ ProjectExplorerd4.dll!ProjectExplorer::ProjectExplorerPlugin::renameFile(ProjectExplorer::Node * node, const QString & newFilePath) Line 3350 C++ ProjectExplorerd4.dll!ProjectExplorer::Internal::FlatModel::setData(const QModelIndex & index, const QVariant & value, int role) Line 173 C++ Qt5Widgetsd.dll!QStyledItemDelegate::setModelData(QWidget * editor, QAbstractItemModel * model, const QModelIndex & index) Line 482 C++ Qt5Widgetsd.dll!QAbstractItemView::commitData(QWidget * editor) Line 2900 C++ Qt5Widgetsd.dll!QAbstractItemView::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 424 C++ Qt5Cored.dll!QMetaObject::activate(QObject * sender, int signalOffset, int local_signal_index, void * * argv) Line 3743 C++ Qt5Cored.dll!QMetaObject::activate(QObject * sender, const QMetaObject * m, int local_signal_index, void * * argv) Line 3605 C++ Qt5Widgetsd.dll!QAbstractItemDelegate::commitData(QWidget * _t1) Line 199 C++ Qt5Widgetsd.dll!QAbstractItemDelegatePrivate::_q_commitDataAndCloseEditor(QWidget * editor) Line 597 C++ Qt5Widgetsd.dll!QAbstractItemDelegate::qt_static_metacall(QObject * _o, QMetaObject::Call _c, int _id, void * * _a) Line 100 C++ Qt5Cored.dll!QMetaCallEvent::placeMetaCall(QObject * object) Line 502 C++ Qt5Cored.dll!QObject::event(QEvent * e) Line 1264 C++ Qt5Widgetsd.dll!QApplicationPrivate::notify_helper(QObject * receiver, QEvent * e) Line 3745 C++ Qt5Widgetsd.dll!QApplication::notify(QObject * receiver, QEvent * e) Line 3105 C++ Qt5Cored.dll!QCoreApplication::notifyInternal2(QObject * receiver, QEvent * event) Line 975 C++ Qt5Cored.dll!QCoreApplication::sendEvent(QObject * receiver, QEvent * event) Line 231 C++ Qt5Cored.dll!QCoreApplicationPrivate::sendPostedEvents(QObject * receiver, int event_type, QThreadData * data) Line 1635 C++ Qt5Cored.dll!QEventDispatcherWin32::sendPostedEvents() Line 1041 C++ qwindowsd.dll!QWindowsGuiEventDispatcher::sendPostedEvents() Line 82 C++ Qt5Cored.dll!qt_internal_proc(HWND__ * hwnd, unsigned int message, unsigned int wp, long lp) Line 217 C++ [External Code] [Frames below may be incorrect and/or missing, no symbols loaded for user32.dll] Qt5Cored.dll!QEventDispatcherWin32::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 608 C++ qwindowsd.dll!QWindowsGuiEventDispatcher::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 74 C++ Qt5Cored.dll!QEventLoop::processEvents(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 135 C++ Qt5Cored.dll!QEventLoop::exec(QFlags<enum QEventLoop::ProcessEventsFlag> flags) Line 212 C++ Qt5Cored.dll!QCoreApplication::exec() Line 1248 C++ Qt5Guid.dll!QGuiApplication::exec() Line 1662 C++ Qt5Widgetsd.dll!QApplication::exec() Line 2922 C++ qtcreator.exe!main(int argc, char * * argv) Line 538 C++ qtcreator.exe!WinMain(HINSTANCE__ * __formal, HINSTANCE__ * __formal, char * __formal, int __formal) Line 104 C++ [External Code]